# Informatica1r1022

./: .gitignore  uncrustifyConfig.cfg
01.11.2016/: CMakeLists.txt
01.11.2016/AbrirCamara/: Makefile  main1.c
01.11.2016/CrearBoton/: Makefile  main.c
01.11.2016/CrearCampoDeTexto/: Makefile  main.c
01.11.2016/DeteccionBordes/: Makefile  main.c
01.11.2016/DeteccionOjos/: Pruebas.cpp  a.out  makefile
01.11.2016/MostrarImagen/: Makefile  main.c  mostrarImagen
01.11.2016/Proyecto/: templateTPO (1).doc
01.11.2016/Proyecto/Cliente/: Makefile  UCHAT  User.xcf  doxyfile  header.h  libclient.c  main.c
01.11.2016/Proyecto/Documentado/Proyecto/Cliente/: Makefile  UCHAT  doxyfile  header.h  libclient.c  main.c
01.11.2016/Proyecto/Documentado/Proyecto/Cliente/doxy/html/: annotated.html  classes.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html
01.11.2016/Proyecto/Documentado/Proyecto/Servidor/: Makefile  doxyfile  dummy.c  server.c  servers  sock-lib.c  sock-lib.h  usuarios.c  usuarios.h
01.11.2016/Proyecto/Documentado/Proyecto/Servidor/doxy/html/: annotated.html  classes.html  files.html  globals.html  globals_func.html  (+2 more)
01.11.2016/Proyecto/Servidor/: Makefile  dummy.c  readme  server.c  sock-lib.c  sock-lib.h  usuarios.c  usuarios.h
01.11.2016/Proyecto/Servidor/servers.dSYM/Contents/: Info.plist
01.11.2016/roadlinedetection/: Analisis1Linea.c  AnalisisFilas.c  Corroborar_Linea.c  CropImage.c  Filtro_Lineas.c  Header.h  ImagesAndLines.c  Lineas_Xvalues.c  Main.c  Makefile  PrintLines.c  README  Validar_Lineas.c  exe  run
(+285 files in other folders)
